external/lmgc90_dev-fortran_lib/src/ChiPy/mailx/wrap_therMAILx.h

 /**
  * @fn void therMAILx_IncrementStep(void)
  * @brief initializes current dof 
  *
  * @cond PYDOC
  * python usage : therMAILx_IncrementStep()
  * @endcond
  */
  extern "C" void therMAILx_IncrementStep(void);
 /**
  * @fn void therMAILx_ComputeConductivity(int * ivector_in=nullptr, int ilength_in=0)
  * @brief computes the elementary conductivity matrices of a list of bodies
  *
  * If the input list is empty, the conductivities of all bodies will be computed
  *
  * @cond PYDOC
  * python usage : therMAILx_ComputeConductivity(i_list)
  * @param[in] i_list (list of integer) : list of bodies to compute conductivities
  *            if omitted works on all objects
  * @endcond
  *
  * @cond CDOC
  * @param[in] vector_in (int*) : list of indices of therMAILx
  * @param[in] length (int)     : size of vector_in
  * @endcond
  */
  extern "C" void therMAILx_ComputeConductivity(int * ivector_in=nullptr, int ilength_in=0);
 /**
  * @fn void therMAILx_ComputeCapacity(int * ivector_in=nullptr, int ilength_in=0)
  * @brief computes the elemetary capacity matrices
  *
  * @cond PYDOC
  * python usage : therMAILx_ComputeCapacity(i_list)
  * @param[in] i_list (list of integer) : list of bodies to compute conductivities
  *            if omitted works on all objects
  * @endcond
  *
  * @cond CDOC
  * @param[in] vector_in (int*) : list of indices of therMAILx
  * @param[in] length (int)     : size of vector_in
  * @endcond
  */
  extern "C" void therMAILx_ComputeCapacity(int * ivector_in=nullptr, int ilength_in=0);
 /**
  * @fn void therMAILx_ComputeInternalFlux(int * ivector_in=nullptr, int ilength_in=0)
  * @brief compute elementary internal flux
  *
  * @cond PYDOC
  * python usage : therMAILx_ComputeInternalFlux(i_list)
  * @param[in] i_list (list of integer) : list of bodies to compute conductivities
  *            if omitted works on all objects
  * @endcond
  * 
  * @cond CDOC
  * @param[in] vector_in (int*) : list of indices of therMAILx
  * @param[in] length (int)     : size of vector_in
  * @endcond
  */
  extern "C" void therMAILx_ComputeInternalFlux(int * ivector_in=nullptr, int ilength_in=0);
 /**
  * @fn void therMAILx_ComputeExternalFlux(int * ivector_in=nullptr, int ilength_in=0)
  * @brief compute elementary external flux
  *
  * @cond PYDOC
  * python usage : therMAILx_ComputeExternalFlux(i_list)
  * @param[in] i_list (list of integer) : list of bodies to compute conductivities
  *            if omitted works on all objects
  * @endcond
  *
  * @cond CDOC
  * @param[in] vector_in (int*) : list of indices of therMAILx
  * @param[in] length (int)     : size of vector_in
  * @endcond
  */
  extern "C" void therMAILx_ComputeExternalFlux(int * ivector_in=nullptr, int ilength_in=0);
 /**
  * @fn void therMAILx_AssembThermKT(int * ivector_in=nullptr, int ilength_in=0)
  * @brief assembles elementary matrices
  *
  * @cond PYDOC
  * python usage : therMAILx_AssembKT(i_list)
  * @param[in] i_list (list of integer) : list of bodies to compute conductivities
  *            if omitted works on all objects
  * @endcond
  *
  * @cond CDOC
  * @param[in] vector_in (int*) : list of indices of therMAILx
  * @param[in] length (int)     : size of vector_in
  * @endcond
  */
  extern "C" void therMAILx_AssembThermKT(int * ivector_in=nullptr, int ilength_in=0);
 /**
  * @fn void therMAILx_AssembThermRHS(int * ivector_in=nullptr, int ilength_in=0)
  * @brief assembles elementary vectors
  *
  * @cond PYDOC
  * python usage : therMAILx_AssembRHS(i_list)
  * @param[in] i_list (list of integer) : list of bodies to compute conductivities
  *            if omitted works on all objects
  * @endcond
  *
  * @cond CDOC
  * @param[in] vector_in (int*) : list of indices of therMAILx
  * @param[in] length (int)     : size of vector_in
  * @endcond
  */
  extern "C" void therMAILx_AssembThermRHS(int * ivector_in=nullptr, int ilength_in=0);
 /**
  * @fn void therMAILx_ComputeThermDof(int * ivector_in=nullptr, int ilength_in=0)
  * @brief computes current dof
  *
  * @cond PYDOC
  * python usage : therMAILx_ComputeThermDof(i_list)
  * @param[in] i_list (list of integer) : list of bodies to compute conductivities
  *            if omitted works on all objects
  * @endcond
  *
  * @cond CDOC
  * @param[in] vector_in (int*) : list of indices of therMAILx
  * @param[in] length (int)     : size of vector_in
  * @endcond
  */
  extern "C" void therMAILx_ComputeThermDof(int * ivector_in=nullptr, int ilength_in=0);
 /**
  * @fn void therMAILx_ComputeThermFields(int * ivector_in=nullptr, int ilength_in=0)
  * @brief computes elementary fields 
  *
  *
  * @cond PYDOC
  * python usage : therMAILx_ComputeThermFields(i_list)
  * @param[in] i_list (list of integer) : list of bodies to compute conductivities
  *            if omitted works on all objects
  * @endcond
  *
  * @cond CDOC
  * @param[in] vector_in (int*) : list of indices of therMAILx
  * @param[in] length (int)     : size of vector_in
  * @endcond
  */
  extern "C" void therMAILx_ComputeThermFields(int * ivector_in=nullptr, int ilength_in=0);
 /**
  * @fn void therMAILx_UpdateThermDof(int * ivector_in=nullptr, int ilength_in=0)
  * @brief update begin dof with current dof
  *
  * @cond PYDOC
  * python usage : therMAILx_UpdateThermDof(i_list)
  * @param[in] i_list (list of integer) : list of bodies to compute conductivities
  *            if omitted works on all objects
  * @endcond
  *
  * @cond CDOC
  * @param[in] vector_in (int*) : list of indices of therMAILx
  * @param[in] length (int)     : size of vector_in
  * @endcond
  */
  extern "C" void therMAILx_UpdateThermDof(int * ivector_in=nullptr, int ilength_in=0);