src/lmgc90_dev/src/ChiPy/mailx/wrap_therMAILx.f90

!===========================================================================
!
! Copyright 2000-2025 CNRS-UM.
!
! This file is part of a software (LMGC90) which is a computer program 
! which purpose is to modelize interaction problems (contact, multi-Physics,etc).
!
! This software is governed by the CeCILL license under French law and
! abiding by the rules of distribution of free software.  You can  use, 
! modify and/ or redistribute the software under the terms of the CeCILL
! license as circulated by CEA, CNRS and INRIA at the following URL
! "http://www.cecill.info". 
!
! As a counterpart to the access to the source code and  rights to copy,
! modify and redistribute granted by the license, users are provided only
! with a limited warranty  and the software's author,  the holder of the
! economic rights,  and the successive licensors  have only  limited
! liability. 
!
! In this respect, the user's attention is drawn to the risks associated
! with loading,  using,  modifying and/or developing or reproducing the
! software by the user in light of its specific status of free software,
! that may mean  that it is complicated to manipulate,  and  that  also
! therefore means  that it is reserved for developers  and  experienced
! professionals having in-depth computer knowledge. Users are therefore
! encouraged to load and test the software's suitability as regards their
! requirements in conditions enabling the security of their systems and/or 
! data to be ensured and,  more generally, to use and operate it in the 
! same conditions as regards security. 
!
! The fact that you are presently reading this means that you have had
! knowledge of the CeCILL license and that you accept its terms.
!
! To report bugs, suggest enhancements, etc. to the Authors, contact
! Frederic Dubois.
!
! frederic.dubois@umontpellier.fr
!
!===========================================================================
MODULE wrap_therMAILx

  USE ISO_C_BINDING

  USE therMAILx,ONLY: get_nb_therMAILx, &
       compute_conductivity_therMAILx, &
       compute_capacity_therMAILx, &
       compute_ttFint_therMAILx, &
       compute_Fext_therMAILx, &
       assemb_KT_therMAILx, &
       assemb_RHS_therMAILx, &
       trial_assemb_KT_therMAILx, &
       trial_assemb_RHS_therMAILx, &
       increment_therMAILx, &
       comp_dof_therMAILx, &
       update_dof_therMAILx, &
       update_bulk_therMAILx, &
       compute_residue_norm_therMAILx, &
       read_in_driven_dof_therMAILx, &
       read_models_therMAILx, &
       read_behaviours_therMAILx, &
       write_xxx_dof_therMAILx, &
       read_in_dof_therMAILx, &
       write_out_driven_dof_therMAILx, &
       read_in_gpv_therMAILx, &
       CHECK_therMAILx, &
       get_write_DOF_therMAILx, &
       get_write_Rnod_therMAILx, &
       get_vector_therMAILx, &
       put_vector_therMAILx, &
       get_field_rank, &
       set_field_bynode, set_field_byelem, &
       get_vfield_rank, &
       set_vfield_bynode, set_vfield_byelem, &
       get_nb_nodes_therMAILx, &
       get_nb_elements_therMAILx, &
       add_source_therMAILx, &
       push_ppset_therMAILx, &
       compute_convection_therMAILx, &
       add_field_divergence_therMAILx, &
       get_NodalGrad_therMAILx ,&
       get_NodalFlux_therMAILx ,&
       apply_drvdof_KT_therMAILx, &
       initialize_elementary_flux_therMAILx, &
       get_coor_therMAILx, &
       get_connectivity_therMAILx, &
       get_All_therMAILx, &
       get_gp_coor_therMAILx , &
       get_gp_field_therMAILx, &
       clean_memory_therMAILx, &
       set_Matrix_Storage_therMAILx, &
       set_Matrix_Shape_therMAILx, &
       set_without_renum_therMAILx, &
       check_properties_therMAILx, &
       get_nb_gp_by_elem_therMAILx, &
       get_nb_gp_therMAILx


CONTAINS

!!!----------------------------------------------------
    

    SUBROUTINE IncrementStep() bind(c, name='therMAILx_IncrementStep')
      IMPLICIT NONE

       CALL increment_therMAILx

    END SUBROUTINE

    subroutine ComputeConductivity(list_ids, length) bind(c, name='therMAILx_ComputeConductivity')
      use timer
      implicit none
      
      type(c_ptr),    intent(in), value :: list_ids
      integer(c_int), intent(in), value :: length
      !
      integer(kind=4), save :: timer_id = 0
      integer(kind=4) :: i
      integer(kind=4), dimension(:), pointer :: list

      if( get_nb_therMAILx() < 1 ) return

                                                       !12345678901234567890
      if( timer_id == 0 ) timer_id = get_new_itimer_ID('[therM] comp condu  ')
      call start_itimer(timer_id)

      if( length == 0 ) then  
        do i = 1, get_nb_therMAILx()
          call compute_conductivity_therMAILx(i,0)
        end do
      else
        call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
        do i = 1, length
          call compute_conductivity_therMAILx(list(i),0)
        end do
      end if

      call stop_itimer(timer_id)

    end subroutine

    subroutine ComputeCapacity(list_ids, length) bind(c, name='therMAILx_ComputeCapacity')
      use timer
      implicit none

      type(c_ptr),    intent(in), value :: list_ids
      integer(c_int), intent(in), value :: length
      !
      integer(kind=4), save :: timer_id = 0
      integer(kind=4) :: i
      integer(kind=4), dimension(:), pointer :: list

      if( get_nb_therMAILx() < 1 ) return

                                                       !12345678901234567890
      if( timer_id == 0 ) timer_id = get_new_itimer_ID('[therM] comp capa   ')
      call start_itimer(timer_id)

      if( length == 0 ) then
        do i = 1, get_nb_therMAILx()
          call compute_capacity_therMAILx(i)
        end do
      else
        call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
        do i = 1, length
          call compute_capacity_therMAILx(list(i))
        end do
      end if

      call stop_itimer(timer_id)

    end subroutine

    subroutine ComputeInternalFlux(list_ids, length) bind(c, name='therMAILx_ComputeInternalFlux')
      use timer
      implicit none

      type(c_ptr),    intent(in), value :: list_ids
      integer(c_int), intent(in), value :: length
      !
      integer(kind=4), save :: timer_id = 0
      integer(kind=4) :: i
      integer(kind=4), dimension(:), pointer :: list

      if( get_nb_therMAILx() < 1 ) return

                                                       !12345678901234567890
      if( timer_id == 0 ) timer_id = get_new_itimer_ID('[therM] comp Fint   ')
      call start_itimer(timer_id)

      if( length == 0 ) then
        do i = 1, get_nb_therMAILx()
          CALL compute_ttFint_therMAILx(i)
        end do
      else
        call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
        do i = 1, length
          call compute_ttFint_therMAILx(list(i))
        end do
      end if

      call stop_itimer(timer_id)

    end subroutine

    subroutine ComputeExternalFlux(list_ids, length) bind(c, name='therMAILx_ComputeExternalFlux')
      use timer
      implicit none

      type(c_ptr),    intent(in), value :: list_ids
      integer(c_int), intent(in), value :: length
      !
      integer(kind=4), save :: timer_id = 0
      integer(kind=4) :: i
      integer(kind=4), dimension(:), pointer :: list

      if( get_nb_therMAILx() < 1 ) return

                                                       !12345678901234567890
      if( timer_id == 0 ) timer_id = get_new_itimer_ID('[therM] comp Fext   ')
      call start_itimer(timer_id)

      if( length == 0 ) then
        do i = 1, get_nb_therMAILx()
          CALL compute_Fext_therMAILx(i)
        end do
      else
        call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
        do i = 1, length
          call compute_Fext_therMAILx(list(i))
        end do
      end if

      call stop_itimer(timer_id)

    end subroutine

    !!! construction of the iteration matrix and the corresponding right hand side vector

    subroutine AssembThermKT(list_ids, length) bind(c, name='therMAILx_AssembThermKT')
      use timer
      implicit none

      type(c_ptr),    intent(in), value :: list_ids
      integer(c_int), intent(in), value :: length
      !
      integer(kind=4), save :: timer_id = 0
      integer(kind=4) :: i
      integer(kind=4), dimension(:), pointer :: list

      if( get_nb_therMAILx() < 1 ) return

                                                       !12345678901234567890
      if( timer_id == 0 ) timer_id = get_new_itimer_ID('[therM] assemb KT   ')
      call start_itimer(timer_id)

      if( length == 0 ) then
        do i = 1, get_nb_therMAILx()
          CALL assemb_KT_therMAILx(i)
          CALL apply_drvdof_KT_therMAILx(i)
        end do
      else
        call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
        do i = 1, length
          CALL assemb_KT_therMAILx(list(i))
          CALL apply_drvdof_KT_therMAILx(list(i))
        end do
      end if

      call stop_itimer(timer_id)

    end subroutine

    subroutine AssembThermRHS(list_ids, length) bind(c, name='therMAILx_AssembThermRHS')
      use timer
      implicit none

      type(c_ptr),    intent(in), value :: list_ids
      integer(c_int), intent(in), value :: length
      !
      integer(kind=4), save :: timer_id = 0
      integer(kind=4) :: i
      integer(kind=4), dimension(:), pointer :: list

      if( get_nb_therMAILx() < 1 ) return

                                                       !12345678901234567890
      if( timer_id == 0 ) timer_id = get_new_itimer_ID('[therM] assemb RHS  ')
      call start_itimer(timer_id)

      if( length == 0 ) then
        do i = 1, get_nb_therMAILx()
          CALL assemb_RHS_therMAILx(i)
        end do
      else
        call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
        do i = 1, length
          call assemb_RHS_therMAILx(list(i))
        end do
      end if

      call stop_itimer(timer_id)

    end subroutine

    subroutine ComputeThermDof(list_ids, length) bind(c, name='therMAILx_ComputeThermDof')
      use timer
      implicit none

      type(c_ptr),    intent(in), value :: list_ids
      integer(c_int), intent(in), value :: length
      !
      integer(kind=4), save :: timer_id = 0
      integer(kind=4) :: i
      integer(kind=4), dimension(:), pointer :: list

      if( get_nb_therMAILx() < 1 ) return

                                                       !12345678901234567890
      if( timer_id == 0 ) timer_id = get_new_itimer_ID('[therM] comp dof    ')
      call start_itimer(timer_id)

      if( length == 0 ) then
        do i = 1, get_nb_therMAILx()
          CALL comp_dof_therMAILx(i)
        end do
      else
        call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
        do i = 1, length
          call comp_dof_therMAILx(list(i))
        end do
      end if

      call stop_itimer(timer_id)

    end subroutine


    subroutine UpdateThermDof(list_ids, length) bind(c, name='therMAILx_UpdateThermDof')
      use timer
      implicit none

      type(c_ptr),    intent(in), value :: list_ids
      integer(c_int), intent(in), value :: length
      !
      integer(kind=4), save :: timer_id = 0
      integer(kind=4) :: i
      integer(kind=4), dimension(:), pointer :: list

      if( get_nb_therMAILx() < 1 ) return

                                                       !12345678901234567890
      if( timer_id == 0 ) timer_id = get_new_itimer_ID('[therM] update dof  ')
      call start_itimer(timer_id)

      if( length == 0 ) then
        do i = 1, get_nb_therMAILx()
          CALL update_dof_therMAILx(i)
        end do
      else
        call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
        do i = 1, length
          call update_dof_therMAILx(list(i))
        end do
      end if

      call stop_itimer(timer_id)

    end subroutine

    subroutine ComputeThermFields(list_ids, length) bind(c, name='therMAILx_ComputeThermFields')
      use timer
      implicit none
